--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-05T20:06:28.001243Z",
      "start_time": "2025-05-05T20:06:04.527878Z"
     }
    },
-   "source": [
-    "# module installation script\n",
-    "%pip install google-generativeai"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -140,16 +137,21 @@
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "# module installation script\n",
+    "%pip install google-generativeai"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-05T20:17:52.115594Z",
      "start_time": "2025-05-05T20:17:52.064965Z"
     }
    },
+   "outputs": [],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -168,7 +170,7 @@
     "genai.configure(api_key=api_key)\n",
     "\n",
     "# --- GAME STATE ---\n",
-    "model_name = \"gemini-1.5-pro\"\n",
+    "model_name = \"gemini-2.0-flash\"\n",
     "player_name = \"Ihno\"\n",
     "context = \"\"\n",
     "game_memory = []\n",
@@ -257,54 +259,11 @@
     "submit_button.on_click(on_button_click)\n",
     "\n",
     "# --- START & DISPLAY ---\n",
+    "# if \"game_ui_initialized\" not in globals():\n",
     "start_new_game()\n",
-    "display(input_box, submit_button, output_area)"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Text(value='', description='▶️ Action:', layout=Layout(width='70%'), placeholder='What does Ihno do next?')"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "688b25b9e4e44b49a09ff125a39ff188"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Button(button_style='success', description='Submit', style=ButtonStyle())"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ac418d599ca24e2493485b76a5bac0fc"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "2413e125e4244f93881ed21d1159e210"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 4
+    "display(input_box, submit_button, output_area)\n",
+    "    # game_ui_initialized = True\n"
+   ]
   }
  ],
  "metadata": {
