invetory and stats update with every new submit

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-05T20:06:28.001243Z",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-05T20:17:52.115594Z",
@@ -82,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2adb2afef7045c899f7bedc2d4a28e8",
+       "model_id": "e4036067e2994b5abaa774f93c8065c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f88dbc735ac94f01aec7e56cef6c3b50",
+       "model_id": "364803f97ce74626a71d6a9d9a692d70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "013645cded1348baa626751dfb854ecc",
+       "model_id": "6630ce2ab5c7440684b0e341dcc5e245",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,6 +130,8 @@
     "from dotenv import load_dotenv\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output, Markdown\n",
+    "import json\n",
+    "import re\n",
     "\n",
     "# --- LOAD API KEY ---\n",
     "load_dotenv()\n",
@@ -158,13 +160,17 @@
     "    return difficulty\n",
     "\n",
     "# --- STORY GENERATION (Gemini) ---\n",
-    "def generate_story(context, player_input, difficulty):\n",
+    "def generate_story(context, player_input, difficulty, player_stats, inventory):\n",
     "    prompt = (\n",
     "        \"You are a fantasy dungeon-master AI. \"\n",
-    "        \"Continue the adventure in a vivid, immersive style, but keep your response concise (max 5 sentences). \"\n",
-    "        \"Do not repeat the player's action or question, only narrate what happens next. \"\n",
-    "        \"Try to keep the story interactive and engaging. \"\n",
-    "        f\"Difficulty level: {difficulty}.\\n\\n\"\n",
+    "        \"Continue the adventure in a vivid, immersive style. \"\n",
+    "        \"Do not repeat the player's action. Keep it concise (max 5 sentences). \"\n",
+    "        \"After the story, provide any game state updates (health, gold, inventory) in this JSON format:\\n\"\n",
+    "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"]}</META>`\\n\"\n",
+    "        \"If no update is needed, just write `<META>{}</META>`.\\n\\n\"\n",
+    "        f\"Difficulty: {difficulty}\\n\"\n",
+    "        f\"Stats: {player_stats}\\n\"\n",
+    "        f\"Inventory: {inventory}\\n\\n\"\n",
     "        f\"{context}\\n\"\n",
     "        f\"{player_name}: {player_input}\\n\"\n",
     "        \"Narrator:\"\n",
@@ -176,6 +182,40 @@
     "        return response.text.strip()\n",
     "    except Exception as e:\n",
     "        return f\"❌ Error generating story: {e}\"\n",
+    "\n",
+    "# --- PARSE META UPDATE ---\n",
+    "def apply_meta_updates(text):\n",
+    "    global player_stats, inventory\n",
+    "\n",
+    "    meta_match = re.search(r\"<META>(.*?)</META>\", text, re.DOTALL)\n",
+    "    if not meta_match:\n",
+    "        return text  # No meta section\n",
+    "\n",
+    "    story_only = re.sub(r\"<META>.*?</META>\", \"\", text, flags=re.DOTALL).strip()\n",
+    "\n",
+    "    try:\n",
+    "        updates = json.loads(meta_match.group(1))\n",
+    "\n",
+    "        # Apply health and gold updates\n",
+    "        if \"health\" in updates:\n",
+    "            player_stats[\"health\"] = max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
+    "        if \"gold\" in updates:\n",
+    "            player_stats[\"gold\"] = max(0, player_stats.get(\"gold\", 0) + updates[\"gold\"])\n",
+    "\n",
+    "        # Inventory changes\n",
+    "        if \"inventory_add\" in updates:\n",
+    "            for item in updates[\"inventory_add\"]:\n",
+    "                if item not in inventory:\n",
+    "                    inventory.append(item)\n",
+    "        if \"inventory_remove\" in updates:\n",
+    "            for item in updates[\"inventory_remove\"]:\n",
+    "                if item in inventory:\n",
+    "                    inventory.remove(item)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        story_only += f\"\\n\\n❌ Error parsing meta update: {e}\"\n",
+    "\n",
+    "    return story_only\n",
     "\n",
     "# --- PRINT GAME STATE ---\n",
     "def print_game_state():\n",
@@ -192,12 +232,12 @@
     "    adjust_difficulty(player_input)\n",
     "\n",
     "    recent_context = \"\\n\".join(game_memory[-6:])\n",
-    "    new_story = generate_story(recent_context, player_input, difficulty)\n",
-    "    \n",
-    "    # ✅ Append only the story, not the player's input\n",
-    "    context_update = f\"\\n{new_story}\"\n",
+    "    raw_output = generate_story(recent_context, player_input, difficulty, player_stats, inventory)\n",
+    "    cleaned_output = apply_meta_updates(raw_output)\n",
+    "\n",
+    "    context_update = f\"\\n{cleaned_output}\"\n",
     "    context += context_update\n",
-    "    game_memory.append(new_story)\n",
+    "    game_memory.append(cleaned_output)\n",
     "\n",
     "    output_area.clear_output(wait=True)\n",
     "    with output_area:\n",
