action input field and submit button is at the bottom instead of the top

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -82,35 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4036067e2994b5abaa774f93c8065c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', description='▶️ Action:', layout=Layout(width='70%'), placeholder='What does Ihno do next?')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "364803f97ce74626a71d6a9d9a692d70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Submit', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6630ce2ab5c7440684b0e341dcc5e245",
+       "model_id": "2509bc02357a41139195d36b79f1ff5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,6 +214,7 @@
     "    output_area.clear_output(wait=True)\n",
     "    with output_area:\n",
     "        print_game_state()\n",
+    "        display(input_box, submit_button)  # 👇 Display input at the bottom\n",
     "\n",
     "# --- START GAME ---\n",
     "def start_new_game():\n",
@@ -255,6 +228,7 @@
     "    with output_area:\n",
     "        display(Markdown(\"🆕 **New game started.**\"))\n",
     "        print_game_state()\n",
+    "        display(input_box, submit_button)\n",
     "\n",
     "# --- UI SETUP ---\n",
     "input_box = widgets.Text(\n",
@@ -274,8 +248,9 @@
     "# --- START & DISPLAY ---\n",
     "if \"game_ui_initialized\" not in globals():\n",
     "    start_new_game()\n",
-    "    display(input_box, submit_button, output_area)\n",
-    "    game_ui_initialized = True\n"
+    "    display(output_area)  # 👇 Display output first\n",
+    "    game_ui_initialized = True\n",
+    "\n"
    ]
   }
  ],
