player can choose difficulty of game himself and stats and items change accordingly

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-05T20:17:52.115594Z",
@@ -81,8 +81,48 @@
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "### Choose your difficulty to start:"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2509bc02357a41139195d36b79f1ff5c",
+       "model_id": "fd05dd01841e4be0aa031377c3dfce8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medium', 'Hard'), v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ade4caeedf54892b290c2bb0004bbd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Start Game', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86029475a95649c3913a00e28ae8d098",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,19 +256,44 @@
     "        print_game_state()\n",
     "        display(input_box, submit_button)  # 👇 Display input at the bottom\n",
     "\n",
-    "# --- START GAME ---\n",
-    "def start_new_game():\n",
+    "# --- START GAME WITH DIFFICULTY ---\n",
+    "def start_new_game(difficulty_choice):\n",
     "    global context, player_stats, inventory, difficulty, game_memory\n",
+    "\n",
+    "    difficulty = {\"Easy\": 1, \"Medium\": 2, \"Hard\": 3}[difficulty_choice]\n",
+    "\n",
+    "    if difficulty_choice == \"Easy\":\n",
+    "        player_stats = {\"health\": 200, \"strength\": 15, \"gold\": 5}\n",
+    "        inventory = [\"torch\", \"wooden sword\"]\n",
+    "    elif difficulty_choice == \"Medium\":\n",
+    "        player_stats = {\"health\": 100, \"strength\": 10, \"gold\": 5}\n",
+    "        inventory = [\"torch\", \"wooden stick\"]\n",
+    "    elif difficulty_choice == \"Hard\":\n",
+    "        player_stats = {\"health\": 50, \"strength\": 5, \"gold\": 5}\n",
+    "        inventory = [\"torch\"]\n",
+    "\n",
     "    context = f\"{player_name} awakens in a dark forest. A mysterious figure approaches.\"\n",
     "    game_memory = [context]\n",
-    "    player_stats = {\"health\": 100, \"strength\": 10, \"gold\": 5}\n",
-    "    inventory = [\"torch\"]\n",
-    "    difficulty = 1\n",
+    "    \n",
     "    output_area.clear_output()\n",
     "    with output_area:\n",
-    "        display(Markdown(\"🆕 **New game started.**\"))\n",
+    "        display(Markdown(f\"**New game started on _{difficulty_choice}_ difficulty.**\"))\n",
     "        print_game_state()\n",
     "        display(input_box, submit_button)\n",
+    "\n",
+    "# --- DIFFICULTY SELECTION UI ---\n",
+    "difficulty_dropdown = widgets.Dropdown(\n",
+    "    options=['Easy', 'Medium', 'Hard'],\n",
+    "    value='Medium',\n",
+    "    description='Difficulty:',\n",
+    "    layout=widgets.Layout(width='50%')\n",
+    ")\n",
+    "start_button = widgets.Button(description=\"Start Game\", button_style='primary')\n",
+    "\n",
+    "def on_start_button_click(b):\n",
+    "    start_new_game(difficulty_dropdown.value)\n",
+    "\n",
+    "start_button.on_click(on_start_button_click)\n",
     "\n",
     "# --- UI SETUP ---\n",
     "input_box = widgets.Text(\n",
@@ -245,12 +310,12 @@
     "\n",
     "submit_button.on_click(on_button_click)\n",
     "\n",
-    "# --- START & DISPLAY ---\n",
+    "# --- INITIAL DISPLAY ---\n",
     "if \"game_ui_initialized\" not in globals():\n",
-    "    start_new_game()\n",
-    "    display(output_area)  # 👇 Display output first\n",
-    "    game_ui_initialized = True\n",
-    "\n"
+    "    display(Markdown(\"### Choose your difficulty to start:\"))\n",
+    "    display(difficulty_dropdown, start_button)\n",
+    "    display(output_area)\n",
+    "    game_ui_initialized = True\n"
    ]
   }
  ],
