knoppen toegevoegd voor huidige game te saven in file savegame.json, een new game te starten en de huidige save file te deleten

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -82,7 +82,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Choose your difficulty to start:"
+       "## 🎮 Welcome to the Fantasy Adventure Game"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -94,12 +94,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd05dd01841e4be0aa031377c3dfce8e",
+       "model_id": "11a317a3145144f48c1012127ab224bc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medium', 'Hard'), v…"
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
       ]
      },
      "metadata": {},
@@ -108,21 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ade4caeedf54892b290c2bb0004bbd8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='primary', description='Start Game', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86029475a95649c3913a00e28ae8d098",
+       "model_id": "18dc11eb60164383a02a910decd37bc2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,12 +124,12 @@
     "# --- IMPORTS ---\n",
     "import os\n",
     "import time\n",
+    "import json\n",
+    "import re\n",
     "import google.generativeai as genai\n",
     "from dotenv import load_dotenv\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output, Markdown\n",
-    "import json\n",
-    "import re\n",
     "\n",
     "# --- LOAD API KEY ---\n",
     "load_dotenv()\n",
@@ -161,6 +147,7 @@
     "player_stats = {}\n",
     "inventory = []\n",
     "difficulty = 1\n",
+    "save_file = \"savegame.json\"\n",
     "\n",
     "# --- DIFFICULTY ADJUSTMENT ---\n",
     "def adjust_difficulty(player_input):\n",
@@ -171,7 +158,7 @@
     "        difficulty = max(difficulty - 1, 1)\n",
     "    return difficulty\n",
     "\n",
-    "# --- STORY GENERATION (Gemini) ---\n",
+    "# --- STORY GENERATION ---\n",
     "def generate_story(context, player_input, difficulty, player_stats, inventory):\n",
     "    prompt = (\n",
     "        \"You are a fantasy dungeon-master AI. \"\n",
@@ -195,26 +182,22 @@
     "    except Exception as e:\n",
     "        return f\"❌ Error generating story: {e}\"\n",
     "\n",
-    "# --- PARSE META UPDATE ---\n",
+    "# --- META UPDATE PARSING ---\n",
     "def apply_meta_updates(text):\n",
     "    global player_stats, inventory\n",
     "\n",
     "    meta_match = re.search(r\"<META>(.*?)</META>\", text, re.DOTALL)\n",
     "    if not meta_match:\n",
-    "        return text  # No meta section\n",
+    "        return text\n",
     "\n",
     "    story_only = re.sub(r\"<META>.*?</META>\", \"\", text, flags=re.DOTALL).strip()\n",
     "\n",
     "    try:\n",
     "        updates = json.loads(meta_match.group(1))\n",
-    "\n",
-    "        # Apply health and gold updates\n",
     "        if \"health\" in updates:\n",
     "            player_stats[\"health\"] = max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
     "        if \"gold\" in updates:\n",
     "            player_stats[\"gold\"] = max(0, player_stats.get(\"gold\", 0) + updates[\"gold\"])\n",
-    "\n",
-    "        # Inventory changes\n",
     "        if \"inventory_add\" in updates:\n",
     "            for item in updates[\"inventory_add\"]:\n",
     "                if item not in inventory:\n",
@@ -223,45 +206,79 @@
     "            for item in updates[\"inventory_remove\"]:\n",
     "                if item in inventory:\n",
     "                    inventory.remove(item)\n",
-    "\n",
     "    except Exception as e:\n",
     "        story_only += f\"\\n\\n❌ Error parsing meta update: {e}\"\n",
     "\n",
     "    return story_only\n",
     "\n",
-    "# --- PRINT GAME STATE ---\n",
+    "# --- GAME DISPLAY ---\n",
     "def print_game_state():\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
     "    display(Markdown(f\"**🧍 {player_name}'s Inventory:** {inventory}\"))\n",
-    "    display(Markdown(f\"**❤️ Stats:** {player_stats} | 🎯 Difficulty:** {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\"))\n",
+    "    display(Markdown(f\"**❤️ Stats:** {player_stats} | 🎯 Difficulty: {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\"))\n",
     "\n",
-    "# --- PLAY TURN ---\n",
+    "# --- GAME TURN ---\n",
     "def play_turn(player_input):\n",
     "    global context\n",
     "    if not player_input.strip():\n",
     "        return\n",
     "    game_memory.append(f\"{player_name}: {player_input}\")\n",
     "    adjust_difficulty(player_input)\n",
-    "\n",
     "    recent_context = \"\\n\".join(game_memory[-6:])\n",
     "    raw_output = generate_story(recent_context, player_input, difficulty, player_stats, inventory)\n",
     "    cleaned_output = apply_meta_updates(raw_output)\n",
-    "\n",
     "    context_update = f\"\\n{cleaned_output}\"\n",
     "    context += context_update\n",
     "    game_memory.append(cleaned_output)\n",
-    "\n",
+    "    save_game()\n",
     "    output_area.clear_output(wait=True)\n",
     "    with output_area:\n",
     "        print_game_state()\n",
-    "        display(input_box, submit_button)  # 👇 Display input at the bottom\n",
+    "        display(input_box, submit_button)\n",
     "\n",
-    "# --- START GAME WITH DIFFICULTY ---\n",
+    "# --- SAVE / LOAD / DELETE ---\n",
+    "def save_game():\n",
+    "    data = {\n",
+    "        \"context\": context,\n",
+    "        \"game_memory\": game_memory,\n",
+    "        \"player_stats\": player_stats,\n",
+    "        \"inventory\": inventory,\n",
+    "        \"difficulty\": difficulty\n",
+    "    }\n",
+    "    with open(save_file, \"w\") as f:\n",
+    "        json.dump(data, f)\n",
+    "\n",
+    "def load_game():\n",
+    "    global context, game_memory, player_stats, inventory, difficulty\n",
+    "    if not os.path.exists(save_file):\n",
+    "        with output_area:\n",
+    "            clear_output()\n",
+    "            display(Markdown(\"❌ No save file found!\"))\n",
+    "        return\n",
+    "    with open(save_file, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "    context = data[\"context\"]\n",
+    "    game_memory = data[\"game_memory\"]\n",
+    "    player_stats = data[\"player_stats\"]\n",
+    "    inventory = data[\"inventory\"]\n",
+    "    difficulty = data[\"difficulty\"]\n",
+    "    with output_area:\n",
+    "        clear_output()\n",
+    "        display(Markdown(\"✅ **Game loaded successfully!**\"))\n",
+    "        print_game_state()\n",
+    "        display(input_box, submit_button)\n",
+    "\n",
+    "def delete_save():\n",
+    "    if os.path.exists(save_file):\n",
+    "        os.remove(save_file)\n",
+    "    with output_area:\n",
+    "        clear_output()\n",
+    "        display(Markdown(\"🗑️ Save file deleted.\"))\n",
+    "\n",
+    "# --- START NEW GAME ---\n",
     "def start_new_game(difficulty_choice):\n",
     "    global context, player_stats, inventory, difficulty, game_memory\n",
-    "\n",
     "    difficulty = {\"Easy\": 1, \"Medium\": 2, \"Hard\": 3}[difficulty_choice]\n",
-    "\n",
     "    if difficulty_choice == \"Easy\":\n",
     "        player_stats = {\"health\": 200, \"strength\": 15, \"gold\": 5}\n",
     "        inventory = [\"torch\", \"wooden sword\"]\n",
@@ -271,29 +288,14 @@
     "    elif difficulty_choice == \"Hard\":\n",
     "        player_stats = {\"health\": 50, \"strength\": 5, \"gold\": 5}\n",
     "        inventory = [\"torch\"]\n",
-    "\n",
     "    context = f\"{player_name} awakens in a dark forest. A mysterious figure approaches.\"\n",
     "    game_memory = [context]\n",
-    "    \n",
-    "    output_area.clear_output()\n",
+    "    save_game()\n",
     "    with output_area:\n",
+    "        clear_output()\n",
     "        display(Markdown(f\"**New game started on _{difficulty_choice}_ difficulty.**\"))\n",
     "        print_game_state()\n",
     "        display(input_box, submit_button)\n",
-    "\n",
-    "# --- DIFFICULTY SELECTION UI ---\n",
-    "difficulty_dropdown = widgets.Dropdown(\n",
-    "    options=['Easy', 'Medium', 'Hard'],\n",
-    "    value='Medium',\n",
-    "    description='Difficulty:',\n",
-    "    layout=widgets.Layout(width='50%')\n",
-    ")\n",
-    "start_button = widgets.Button(description=\"Start Game\", button_style='primary')\n",
-    "\n",
-    "def on_start_button_click(b):\n",
-    "    start_new_game(difficulty_dropdown.value)\n",
-    "\n",
-    "start_button.on_click(on_start_button_click)\n",
     "\n",
     "# --- UI SETUP ---\n",
     "input_box = widgets.Text(\n",
@@ -302,20 +304,32 @@
     "    layout=widgets.Layout(width='70%')\n",
     ")\n",
     "submit_button = widgets.Button(description=\"Submit\", button_style='success')\n",
+    "submit_button.on_click(lambda b: (play_turn(input_box.value), setattr(input_box, \"value\", \"\")))\n",
+    "\n",
     "output_area = widgets.Output()\n",
     "\n",
-    "def on_button_click(b):\n",
-    "    play_turn(input_box.value)\n",
-    "    input_box.value = ''\n",
+    "# --- GAME MENU ---\n",
+    "difficulty_dropdown = widgets.Dropdown(\n",
+    "    options=['Easy', 'Medium', 'Hard'],\n",
+    "    value='Medium',\n",
+    "    description='Difficulty:',\n",
+    "    layout=widgets.Layout(width='50%')\n",
+    ")\n",
+    "start_button = widgets.Button(description=\"New Game\", button_style='primary')\n",
+    "load_button = widgets.Button(description=\"Load Game\", button_style='info')\n",
+    "delete_button = widgets.Button(description=\"Delete Save\", button_style='danger')\n",
     "\n",
-    "submit_button.on_click(on_button_click)\n",
+    "start_button.on_click(lambda b: start_new_game(difficulty_dropdown.value))\n",
+    "load_button.on_click(lambda b: load_game())\n",
+    "delete_button.on_click(lambda b: delete_save())\n",
     "\n",
-    "# --- INITIAL DISPLAY ---\n",
+    "# --- INITIAL UI DISPLAY ---\n",
     "if \"game_ui_initialized\" not in globals():\n",
-    "    display(Markdown(\"### Choose your difficulty to start:\"))\n",
-    "    display(difficulty_dropdown, start_button)\n",
+    "    display(Markdown(\"## Welcome to the Fantasy Adventure Game\"))\n",
+    "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
-    "    game_ui_initialized = True\n"
+    "    game_ui_initialized = True\n",
+    "\n"
    ]
   }
  ],
