story begint op nieuwe lijn opnieuw, was verwijderd wegens merge conflict problemen, new game en save game is er nog

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -82,7 +82,7 @@
     {
      "data": {
       "text/markdown": [
-       "## 🎮 Welcome to the Fantasy Adventure Game"
+       "## Welcome to the Fantasy Adventure Game"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11a317a3145144f48c1012127ab224bc",
+       "model_id": "d27d33682bd847929965cd2fd375cd69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18dc11eb60164383a02a910decd37bc2",
+       "model_id": "c3a2019fd14c46a3b513fe563d5261ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +227,7 @@
     "    recent_context = \"\\n\".join(game_memory[-6:])\n",
     "    raw_output = generate_story(recent_context, player_input, difficulty, player_stats, inventory)\n",
     "    cleaned_output = apply_meta_updates(raw_output)\n",
-    "    context_update = f\"\\n{cleaned_output}\"\n",
+    "    context_update = f\"\\n\\n{cleaned_output}\"\n",
     "    context += context_update\n",
     "    game_memory.append(cleaned_output)\n",
     "    save_game()\n",
