added a leveling system

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d27d33682bd847929965cd2fd375cd69",
+       "model_id": "ed16727ba31d4295940773e2327e89ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,12 +108,24 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a2019fd14c46a3b513fe563d5261ef",
+       "model_id": "7e4fe3c83bc24e4dbb8a82d64099baff",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "🎉 **Level Up!** Ihno reached level 2!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -158,14 +170,33 @@
     "        difficulty = max(difficulty - 1, 1)\n",
     "    return difficulty\n",
     "\n",
+    "# --- XP AND LEVELING SYSTEM ---\n",
+    "def xp_required(level):\n",
+    "    return 20 + (level - 1) * 15\n",
+    "\n",
+    "def check_level_up():\n",
+    "    level = player_stats.get(\"level\", 1)\n",
+    "    xp = player_stats.get(\"xp\", 0)\n",
+    "    leveled_up = False\n",
+    "    while xp >= xp_required(level):\n",
+    "        xp -= xp_required(level)\n",
+    "        level += 1\n",
+    "        player_stats[\"health\"] += 10\n",
+    "        player_stats[\"strength\"] += 2\n",
+    "        leveled_up = True\n",
+    "    player_stats[\"xp\"] = xp\n",
+    "    player_stats[\"level\"] = level\n",
+    "    if leveled_up:\n",
+    "        display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
+    "\n",
     "# --- STORY GENERATION ---\n",
     "def generate_story(context, player_input, difficulty, player_stats, inventory):\n",
     "    prompt = (\n",
     "        \"You are a fantasy dungeon-master AI. \"\n",
     "        \"Continue the adventure in a vivid, immersive style. \"\n",
     "        \"Do not repeat the player's action. Keep it concise (max 5 sentences). \"\n",
-    "        \"After the story, provide any game state updates (health, gold, inventory) in this JSON format:\\n\"\n",
-    "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"]}</META>`\\n\"\n",
+    "        \"After the story, provide any game state updates (health, gold, inventory, xp) in this JSON format:\\n\"\n",
+    "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"xp\\\": 10, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"]}</META>`\\n\"\n",
     "        \"If no update is needed, just write `<META>{}</META>`.\\n\\n\"\n",
     "        f\"Difficulty: {difficulty}\\n\"\n",
     "        f\"Stats: {player_stats}\\n\"\n",
@@ -198,6 +229,9 @@
     "            player_stats[\"health\"] = max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
     "        if \"gold\" in updates:\n",
     "            player_stats[\"gold\"] = max(0, player_stats.get(\"gold\", 0) + updates[\"gold\"])\n",
+    "        if \"xp\" in updates:\n",
+    "            player_stats[\"xp\"] = player_stats.get(\"xp\", 0) + updates[\"xp\"]\n",
+    "            check_level_up()\n",
     "        if \"inventory_add\" in updates:\n",
     "            for item in updates[\"inventory_add\"]:\n",
     "                if item not in inventory:\n",
@@ -214,8 +248,11 @@
     "# --- GAME DISPLAY ---\n",
     "def print_game_state():\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
-    "    display(Markdown(f\"**🧍 {player_name}'s Inventory:** {inventory}\"))\n",
-    "    display(Markdown(f\"**❤️ Stats:** {player_stats} | 🎯 Difficulty: {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\"))\n",
+    "    display(Markdown(\n",
+    "        f\"**🧍 {player_name}'s Inventory:** {inventory}  \\n\"\n",
+    "        f\"**❤️ Stats:** {player_stats}  \\n\"\n",
+    "        f\"🎯 Difficulty: {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\"\n",
+    "    ))\n",
     "\n",
     "# --- GAME TURN ---\n",
     "def play_turn(player_input):\n",
@@ -280,13 +317,13 @@
     "    global context, player_stats, inventory, difficulty, game_memory\n",
     "    difficulty = {\"Easy\": 1, \"Medium\": 2, \"Hard\": 3}[difficulty_choice]\n",
     "    if difficulty_choice == \"Easy\":\n",
-    "        player_stats = {\"health\": 200, \"strength\": 15, \"gold\": 5}\n",
+    "        player_stats = {\"health\": 200, \"strength\": 15, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
     "        inventory = [\"torch\", \"wooden sword\"]\n",
     "    elif difficulty_choice == \"Medium\":\n",
-    "        player_stats = {\"health\": 100, \"strength\": 10, \"gold\": 5}\n",
+    "        player_stats = {\"health\": 100, \"strength\": 10, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
     "        inventory = [\"torch\", \"wooden stick\"]\n",
     "    elif difficulty_choice == \"Hard\":\n",
-    "        player_stats = {\"health\": 50, \"strength\": 5, \"gold\": 5}\n",
+    "        player_stats = {\"health\": 50, \"strength\": 5, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
     "        inventory = [\"torch\"]\n",
     "    context = f\"{player_name} awakens in a dark forest. A mysterious figure approaches.\"\n",
     "    game_memory = [context]\n",
@@ -328,8 +365,7 @@
     "    display(Markdown(\"## Welcome to the Fantasy Adventure Game\"))\n",
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
-    "    game_ui_initialized = True\n",
-    "\n"
+    "    game_ui_initialized = True\n"
    ]
   }
  ],
