changed prompt to allow for interactive

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,67 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-05T20:17:52.115594Z",
-     "start_time": "2025-05-05T20:17:52.064965Z"
+     "end_time": "2025-05-07T13:28:33.263325Z",
+     "start_time": "2025-05-07T13:28:31.467768Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Welcome to the Fantasy Adventure Game"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed16727ba31d4295940773e2327e89ea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e4fe3c83bc24e4dbb8a82d64099baff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "🎉 **Level Up!** Ihno reached level 2!"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -195,6 +140,7 @@
     "        \"You are a fantasy dungeon-master AI. \"\n",
     "        \"Continue the adventure in a vivid, immersive style. \"\n",
     "        \"Do not repeat the player's action. Keep it concise (max 5 sentences). \"\n",
+    "        \"Make it interactive, try and end the output with a question so that the player can react to it. \"\n",
     "        \"After the story, provide any game state updates (health, gold, inventory, xp) in this JSON format:\\n\"\n",
     "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"xp\\\": 10, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"]}</META>`\\n\"\n",
     "        \"If no update is needed, just write `<META>{}</META>`.\\n\\n\"\n",
@@ -366,7 +312,48 @@
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
     "    game_ui_initialized = True\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "## Welcome to the Fantasy Adventure Game"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "26e2300ad27a4f6abc777ac0064ed76c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Output()"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3ab64e0a0103498fab88faf8cddfa7e4"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
